--- a/package.json
+++ b/package.json
@@ -1,10 +1,19 @@
 {
   "name": "MiniProj3",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "server.js",
   "author": "cabanga <manucabanga@gmail.com>",
   "license": "MIT",
+  "scripts": {
+    "dev": "nodemon server.js",
+    "start": "node server.js"
+  },
   "dependencies": {
+    "body-parser": "^1.20.2",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.2"
   }
 }
